--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ img {
   height: 260px;
 }
 
+
+
 /*=contact details*/
 .phone {
   padding-bottom: 15px;
@@ -71,6 +73,10 @@ img {
 
 
 /*=social links*/
+.personal_id li {
+  display: inline;
+}
+
 .facebook a, .google a, .twitter a, .linked_in a {
   border-radius: 5px;
   height: 40px;
