--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ ul {
 }
 body {  
   background: #CCC;
+  position:absolute; 
+  width:100%;
+  height: 100%;
 }
 
 header h1 {
@@ -37,6 +40,7 @@ h3 {
 .profile {
   width: 50%;
   float: left;
+  position:absolute;
 }
 
 /*parent div for collegues*/
@@ -60,8 +64,6 @@ img {
   margin: 10px;
   height: 260px;
 }
-
-
 
 /*=contact details*/
 .phone {
@@ -88,10 +90,9 @@ img {
 
 .facebook a, .google a, .twitter a, .linked_in a {
   border-radius: 5px;
-  height: 40px;
+  height: 2em;
   width: 13%;
   float: left;
-  position: relative;
   margin-right: 1%;
 }
 
@@ -107,7 +108,7 @@ img {
 .facebook a {
   background: #23476A;
   background-image: url(images/facebook_logo.png);
-  background-size: 28px;
+  background-size: 1.5em;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -115,7 +116,7 @@ img {
   background: #A92A24;
   background-image: url(images/google_logo.png);
   background-repeat: no-repeat;
-  background-size: 37px;
+  background-size: 2em;
   background-position: center;
 }
 
@@ -123,7 +124,7 @@ img {
   background-color: #00ABF0;
   background-image: url(images/twitter_logo.png);
   background-repeat: no-repeat;
-  background-size: 30px;
+  background-size: 2em;
   background-position: center;
 }
 
@@ -131,7 +132,7 @@ img {
   background: black;
   background-image: url(images/linkedin_logo.png);
   background-repeat: no-repeat;
-  background-size: 34px;
+  background-size: 2em;
   background-position: center;
 }
 
@@ -167,7 +168,7 @@ img {
 }
 
 textarea {
-  font-size: 15px;
+  font-size: 1em;
   resize: none;
   margin: auto;
   display: block;
