--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-ul {
+.main ul li {
   list-style-type: none;
 }
+
 body {  
   background: #CCC;
   position:absolute; 
@@ -13,8 +14,9 @@ header h1 {
   color: #CCC;
   padding: 15px 25px;
   font-size: 40px;
+  margin: 0;
 }
-/*headding formattting for the page*/
+
 h1 {
   color: #CCC;
   font-size: 35px;
@@ -36,86 +38,58 @@ h3 {
   padding-bottom: 10px;
 }
 
-/*parent div for back_g and personal_id*/
+img {
+  margin: 30px;
+  float: left;
+}
+
+.colleague_list {
+  width: 50%;
+  float: right;
+  padding: 0;
+  margin: 0;
+}
+
+.colleague_list li {
+  background: #369;
+  margin: 10px;
+  overflow: auto;
+}
+
 .profile {
   width: 50%;
   float: left;
   position:absolute;
 }
 
-/*parent div for collegues*/
-.colleague_list {
-  width: 50%;
-  float: right;
-  margin: 0px;
-  padding: 0px;
-}
-
-/*set image size for the page*/
-
-img  {
-  height: 200px;
-  width: 200px;
-  padding: 30px;
-  float: left;
-  position: relative;
-}
-.colleague {
+.back_g {
   background-color: #369;
+  padding: 0;
   margin: 10px;
-  height: 260px;
 }
 
 .personal_id {
-  background-color: #369;
+  background: #369;
   margin: 10px;
-  height: 260px;
+  overflow: auto;
 }
 
-.personal_id ul {
-  margin: 0px;
+.social_links a:hover {
+  border:1px solid white;
 }
 
-/*=contact details*/
-.phone {
-  padding-bottom: 15px;
-}
-.phone, .mail {
-  color: #D5A725;
-  font-size: 20px;
-  margin: 0;
-}
-.phone i, .mail i {
-  padding-right: 10px;  
-}
-
-
-/*=social links*/
-.personal_id li a {
-  display: inline;
-}
-
-.colleague li a {
-  display: inline;
-}
-
-.facebook a, .google a, .twitter a, .linked_in a {
+.social_links a {
   border-radius: 5px;
   height: 2em;
   width: 13%;
   float: left;
   margin-right: 1%;
 }
-
-.mail a {
-  text-decoration: none;
-  color: #D5A725;
+.social_links li {
+  display: inline;
+  margin: 0;
 }
 
-.facebook a:hover, .google a:hover, .twitter a:hover, .linked_in a:hover {
-  border:1px solid white;
-}
-/*logos for social links*/
 .facebook a {
   background: #23476A;
   background-image: url(images/facebook_logo.png);
@@ -147,32 +121,32 @@ img  {
   background-position: center;
 }
 
-/*hover for mail and phone*/
+.phone {
+  padding-bottom: 15px;
+}
+.phone, .mail {
+  color: #D5A725;
+  font-size: 20px;
+  margin: 0;
+}
+.phone i, .mail i {
+  padding-right: 10px;  
+}
+
+.mail a {
+  text-decoration: none;
+  color: #D5A725;
+}
+
 .phone:hover , .mail a:hover {
   color: #FFDEAD;
 }
-/*parent div for hobbies, video and details*/
-.back_g {
-  background-color: #369;
-  margin: 10px;
 
-/*=hobbies section*/
-}
 .details, .hobbies, .video {
   border-bottom: 2px solid #CCC;
   padding: 15px 30px;
 }
 
-.hobbies ul {
-  list-style-type: none;
-}
-
-/*=video section*/
-.video video {
-  width: 100%;
-}
-
-/*=details section*/
 .details form {
   margin: auto;
   display: block;
@@ -193,9 +167,11 @@ select {
 .details label {
   font-size: 19px;
 }
+
 table {
   margin: auto;
 }
+
 .details td {
   padding: 5px;
 }
@@ -205,27 +181,30 @@ table {
   margin: auto;
   display: block;
 }
+
+.video video {
+  width: 100%;
+}
+
 /*=joke section*/
 .joke {
   background-image: url(images/quote_background.jpg);
-  height: 150px;
   margin: 10px;
+  padding: 2em;
 }
 
-.joke p {
+.joke P {
   font-size: 25px;
   font-style: italic;
   color: #CCC;
   background: rgba(0,0,0,0.5);
-  float: left;
-  margin: 2em;
-  text-align: center;
 }
 
 /*=footer section*/
 footer {
   background: #036;
-  clear: both;
+  clear:both;
+  display: block;
 }
 
 footer p {
